--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,12 @@
+:root {
+  --main-font-color: #926239;
+  --secondary-font-color: #fff;
+
+  --bg-dark-color: #926239;
+  --first-bg-light-color: #f4f4f4;
+  --secondary-bg-light-color: #f9f9f9;
+}
+
 body {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
@@ -5,17 +14,18 @@ body {
   font-size: 17px;
   line-height: 1.6;
   text-align: center;
-  color: #926239;
-  background-color: #926239;
+  color: var(--main-font-color);
+  background-color: var(--bg-dark-color);
 }
+
 * {
   margin: 0;
   padding: 0;
 }
 /* Heder */
+
 .section {
   padding: 0 20px;
-  justify-content: center;
   height: 100vh;
   background-image: url(../beachshowcase.jpg);
   background-repeat: no-repeat;
@@ -24,6 +34,7 @@ body {
 }
 
 .title {
+  padding: 25% 0 0 0;
   font-size: 50px;
   font-weight: bold;
   line-height: 1.2;
@@ -34,41 +45,44 @@ body {
 }
 
 .button {
-  font-size: 18px;
-  text-decoration: none;
-  color: #926239;
-  border: #926239 solid 1px;
-  border-radius: 10px;
+  display: inline-block;
   padding: 10px 20px;
   margin-top: 20px;
+  font-size: 18px;
+  text-decoration: none;
+  color: var(--main-font-color);
+  border: var(--bg-dark-color) solid 1px;
+  border-radius: 10px;
 }
 
 .button:hover,
 .button:focus {
-  background-color: #926239;
-  color: #fff;
+  background-color: var(--bg-dark-color);
+  color: var(--secondary-font-color);
 }
 
 /* main */
 .bgdark {
   padding: 20px;
-color: #fff;
+  color: var(--secondary-font-color);
 }
 
 .bglight {
   padding: 20px;
-  background-color: #f4f4f4;
+  background-color: var(--first-bg-light-color);
 }
 
 .section-title {
   display: none;
 }
 
-.bglightness {
-  padding: 20px;
-  background-color: #f9f9f9;
+article {
+  box-sizing: border-box;
+  text-align: left;
+  width: 33%; 
+  display: inline-block;
 }
 
-article {
-  display: inline-block;
+article.bglight {
+  background-color: var(--secondary-bg-light-color);
 }
