--- a/style/styles.css
+++ b/style/styles.css
@@ -8,25 +8,24 @@
 }
 
 body {
-  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
   font-size: 17px;
   line-height: 1.6;
   text-align: center;
   color: var(--main-font-color);
-  background-color: var(--bg-dark-color);
 }
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 /* Heder */
 
-.section {
-  padding: 0 20px;
-  height: 100vh;
+.header {
+  padding: 30vh 20px 10vh 20px;
+  min-height: 100vh;
   background-image: url(../beachshowcase.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,7 +33,7 @@ body {
 }
 
 .title {
-  padding: 25% 0 0 0;
+  text-transform: capitalize;
   font-size: 50px;
   font-weight: bold;
   line-height: 1.2;
@@ -65,6 +64,7 @@ body {
 .bgdark {
   padding: 20px;
   color: var(--secondary-font-color);
+  background-color: var(--bg-dark-color);
 }
 
 .bglight {
@@ -72,17 +72,12 @@ body {
   background-color: var(--first-bg-light-color);
 }
 
-.section-title {
-  display: none;
-}
-
-article {
-  box-sizing: border-box;
+.column {
   text-align: left;
-  width: 33%; 
+  width: 33%;
   display: inline-block;
 }
 
-article.bglight {
+.column.bglight {
   background-color: var(--secondary-bg-light-color);
 }
